# JOREK_postproc

./: .flake8  .gitignore  .pre-commit-config.yaml  3d_heatF.py  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FILE_INVENTORY.md  FILE_MANIFEST.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  INFRASTRUCTURE_SUMMARY.md  MANIFEST.in  PACKAGE_STRUCTURE.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART_DEVELOPER.md  QUICK_START.txt  README.md  RELEASE_CHECKLIST.md  USAGE_GUIDE.md  bdy_quant_plot.py  energy_impact_new.py  impact_t+val_2000  plot_Psi_data.py  plot_bnd_quant_3d_legs.py  plot_fourier.ipynb  plot_grid.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
deb_dist/: jorek-postproc_0.1.0-1.debian.tar.xz  jorek-postproc_0.1.0-1.dsc  jorek-postproc_0.1.0-1_amd64.buildinfo  jorek-postproc_0.1.0-1_amd64.changes  jorek-postproc_0.1.0-1_source.buildinfo  jorek-postproc_0.1.0-1_source.changes  python3-jorek-postproc_0.1.0-1_all.deb
deb_dist/jorek-postproc-0.1.0/: CHANGELOG.md  GETTING_STARTED.md  PKG-INFO  README.md  setup.py
deb_dist/jorek-postproc-0.1.0/debian/: control  files  python3-jorek-postproc.postinst.debhelper  python3-jorek-postproc.prerm.debhelper  python3-jorek-postproc.substvars  rules  watch
deb_dist/jorek-postproc-0.1.0/jorek_postproc/: __init__.py  (+6 more)
jorek_postproc/: QUICK_REFERENCE.md  __init__.py  __version__.py  boundary_analysis.py  cli.py  config.py  data_models.py  diagnostics.py  energy_impact.py  example.py  geometry.py  io.py  logging.py  plotting.py  processing.py  reshaping.py
redundent/: 3d_heatF.ipynb  energy_impact.py  energy_impact_new_copy.py  plot_Psi_data.py  plot_bdy_quant_2d_heatFlux.py  plot_bnd_quant_3d_legs.py  plot_energies.py  plot_fourier.ipynb  plot_grid.py  plot_grid_inj.py  plot_init_cond.py
test_data/: measurement_1.txt  measurement_2.txt  measurement_3.txt  measurement_4.txt  measurement_5.txt
tests/: conftest.py  test_basic.py  test_cli.py  test_config.py  test_diagnostics.py  test_energy_impact.py  test_geometry.py  test_io.py  test_logging.py  test_plotting.py  test_processing.py  test_reshaping.py
util/: plot_bnd_quant_3d.ipynb
(+10 files in other folders)
