[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jorek_postproc"
version = "0.1.0"
description = "JOREK后处理包 - 边界量可视化工具"
readme = "README.md"
authors = [
    {name = "Allen Cheng", email = "Allencheng@buaa.edu.cn"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.1.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "isort>=5.0",
]
docs = [
    "sphinx>=3.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.scripts]
jorek-postproc = "jorek_postproc.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jorek_postproc"
Documentation = "https://jorek-postproc.readthedocs.io"
Repository = "https://github.com/yourusername/jorek_postproc.git"
Issues = "https://github.com/yourusername/jorek_postproc/issues"

[tool.setuptools]
packages = ["jorek_postproc"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=jorek_postproc --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]
